# countduckula

./: Cargo.toml  Makefile
c/: test_circuits.c
src/: lib.rs
