[package]
name = "countduckula"
version = "0.1.0"
authors = ["user"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bellman_ce = { version = "0.3", default-features = false, features = ["wasm"] }
sapling-crypto_ce = { git = "https://github.com/matter-labs/sapling-crypto", default-features = false }
rand = "0.4"
sha2 = "0.8"
wasm-bindgen = "0.2"
wee_alloc = { version = "0.4" }
